# rsume

./: Cargo.toml  author.toml  resume.cls
src/: main.rs
templates/: macros.html  resume.tex
