[package]
name = "rsume"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tectonic = "0.12.0"
anyhow = "1.0.70"
tectonic_bundles = "0.3.0"
tera = "1"
serde = { version = "1.0.158", features = ["derive"] }
toml = "0.7.3"
